include/ristretto255.h

typedef uint64_t ristretto_word_t;      /**< Word size for internal computations */
typedef uint64_t ristretto_bool_t;      /**< "Boolean" type, will be set to all-zero or all-one (i.e. -1u) */
typedef uint32_t ristretto_word_t;      /**< Word size for internal computations */
typedef uint32_t ristretto_bool_t;      /**< "Boolean" type, will be set to all-zero or all-one (i.e. -1u) */
/** RISTRETTO_TRUE = -1 so that RISTRETTO_TRUE & x = x */
extern const ristretto_bool_t RISTRETTO_TRUE;
/** RISTRETTO_FALSE = 0 so that RISTRETTO_FALSE & x = 0 */
extern const ristretto_bool_t RISTRETTO_FALSE;
/** Another boolean type used to indicate success or failure. */
typedef enum {
    RISTRETTO_SUCCESS = -1, /**< The operation succeeded. */
    RISTRETTO_FAILURE = 0   /**< The operation failed. */
} ristretto_error_t;
typedef struct {
    ristretto_word_t limb[RISTRETTO255_FIELD_LIMBS];
} __attribute__((aligned(32))) gf_25519_t;
/** Representation of a point on the elliptic curve. */
typedef struct {
    /** @cond internal */
    gf_25519_t x,y,z,t; /* Twisted extended homogeneous coordinates */
    /** @endcond */
} ristretto255_point_t;
/** Precomputed table based on a point.  Can be trivial implementation. */
struct ristretto255_precomputed_s;
/** Precomputed table based on a point.  Can be trivial implementation. */
typedef struct ristretto255_precomputed_s ristretto255_precomputed_s;
/** Representation of an element of the scalar field. */
typedef struct {
    /** @cond internal */
    ristretto_word_t limb[RISTRETTO255_SCALAR_LIMBS];
    /** @endcond */
} ristretto255_scalar_t;
/** An arbitrarily-chosen base point on the curve. */
extern const ristretto255_point_t ristretto255_point_base;
/** An arbitrarily-chosen base point on the curve. */
extern const ristretto255_point_t ristretto255_point_base;
/**
 * @brief Multiply a base point by a scalar: scaled = scalar*base.
 *
 * @param [out] scaled The scaled point base*scalar
 * @param [in] base The point to be scaled.
 * @param [in] scalar The scalar to multiply by.
 */
void ristretto255_point_scalarmul (
    ristretto255_point_t *scaled,
    const ristretto255_point_t *base,
    const ristretto255_scalar_t *scalar
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Multiply a base point by a scalar: scaled = scalar*base.
 * This function operates directly on serialized forms.
 *
 * @warning This function is experimental.  It may not be supported
 * long-term.
 *
 * @param [out] scaled The scaled point base*scalar
 * @param [in] base The point to be scaled.
 * @param [in] scalar The scalar to multiply by.
 * @param [in] allow_identity Allow the input to be the identity.
 * @param [in] short_circuit Allow a fast return if the input is illegal.
 *
 * @retval RISTRETTO_SUCCESS The scalarmul succeeded.
 * @retval RISTRETTO_FAILURE The scalarmul didn't succeed, because
 * base does not represent a point.
 */
ristretto_error_t ristretto255_direct_scalarmul (
    uint8_t scaled[RISTRETTO255_SER_BYTES],
    const uint8_t base[RISTRETTO255_SER_BYTES],
    const ristretto255_scalar_t *scalar,
    ristretto_bool_t allow_identity,
    ristretto_bool_t short_circuit
) RISTRETTO_NONNULL RISTRETTO_WARN_UNUSED RISTRETTO_NOINLINE;
/**
 * @brief Precompute a table for fast scalar multiplication.
 * Some implementations do not include precomputed points; for
 * those implementations, this implementation simply copies the
 * point.
 *
 * @param [out] a A precomputed table of multiples of the point.
 * @param [in] b Any point.
 */
void ristretto255_precompute (
    ristretto255_precomputed_s *a,
    const ristretto255_point_t *b
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Multiply a precomputed base point by a scalar:
 * scaled = scalar*base.
 * Some implementations do not include precomputed points; for
 * those implementations, this function is the same as
 * ristretto255_point_scalarmul
 *
 * @param [out] scaled The scaled point base*scalar
 * @param [in] base The point to be scaled.
 * @param [in] scalar The scalar to multiply by.
 */
void ristretto255_precomputed_scalarmul (
    ristretto255_point_t *scaled,
    const ristretto255_precomputed_s *base,
    const ristretto255_scalar_t *scalar
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Multiply two base points by two scalars:
 * scaled = scalar1*base1 + scalar2*base2.
 *
 * Equivalent to two calls to ristretto255_point_scalarmul, but may be
 * faster.
 *
 * @param [out] combo The linear combination scalar1*base1 + scalar2*base2.
 * @param [in] base1 A first point to be scaled.
 * @param [in] scalar1 A first scalar to multiply by.
 * @param [in] base2 A second point to be scaled.
 * @param [in] scalar2 A second scalar to multiply by.
 */
void ristretto255_point_double_scalarmul (
    ristretto255_point_t *combo,
    const ristretto255_point_t *base1,
    const ristretto255_scalar_t *scalar1,
    const ristretto255_point_t *base2,
    const ristretto255_scalar_t *scalar2
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * Multiply one base point by two scalars:
 *
 * a1 = scalar1 * base
 * a2 = scalar2 * base
 *
 * Equivalent to two calls to ristretto255_point_scalarmul, but may be
 * faster.
 *
 * @param [out] a1 The first multiple.  It may be the same as the input point.
 * @param [out] a2 The second multiple.  It may be the same as the input point.
 * @param [in] base1 A point to be scaled.
 * @param [in] scalar1 A first scalar to multiply by.
 * @param [in] scalar2 A second scalar to multiply by.
 */
void ristretto255_point_dual_scalarmul (
    ristretto255_point_t *a1,
    ristretto255_point_t *a2,
    const ristretto255_point_t *base1,
    const ristretto255_scalar_t *scalar1,
    const ristretto255_scalar_t *scalar2
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Multiply two base points by two scalars:
 * scaled = scalar1*ristretto255_point_base + scalar2*base2.
 *
 * Otherwise equivalent to ristretto255_point_double_scalarmul, but may be
 * faster at the expense of being variable time.
 *
 * @param [out] combo The linear combination scalar1*base + scalar2*base2.
 * @param [in] scalar1 A first scalar to multiply by.
 * @param [in] base2 A second point to be scaled.
 * @param [in] scalar2 A second scalar to multiply by.
 *
 * @warning: This function takes variable time, and may leak the scalars
 * used.  It is designed for signature verification.
 */
void ristretto255_base_double_scalarmul_non_secret (
    ristretto255_point_t *combo,
    const ristretto255_scalar_t *scalar1,
    const ristretto255_point_t *base2,
    const ristretto255_scalar_t *scalar2
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Constant-time decision between two points.  If pick_b
 * is zero, out = a; else out = b.
 *
 * @param [out] out The output.  It may be the same as either input.
 * @param [in] a Any point.
 * @param [in] b Any point.
 * @param [in] pick_b If nonzero, choose point b.
 */
void ristretto255_point_cond_sel (
    ristretto255_point_t *out,
    const ristretto255_point_t *a,
    const ristretto255_point_t *b,
    ristretto_word_t pick_b
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Constant-time decision between two scalars.  If pick_b
 * is zero, out = a; else out = b.
 *
 * @param [out] out The output.  It may be the same as either input.
 * @param [in] a Any scalar.
 * @param [in] b Any scalar.
 * @param [in] pick_b If nonzero, choose scalar b.
 */
void ristretto255_scalar_cond_sel (
    ristretto255_scalar_t *out,
    const ristretto255_scalar_t *a,
    const ristretto255_scalar_t *b,
    ristretto_word_t pick_b
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Test that a point is valid, for debugging purposes.
 *
 * @param [in] to_test The point to test.
 * @retval RISTRETTO_TRUE The point is valid.
 * @retval RISTRETTO_FALSE The point is invalid.
 */
ristretto_bool_t ristretto255_point_valid (
    const ristretto255_point_t *to_test
) RISTRETTO_WARN_UNUSED RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Torque a point, for debugging purposes.  The output
 * will be equal to the input.
 *
 * @param [out] q The point to torque.
 * @param [in] p The point to torque.
 */
void ristretto255_point_debugging_torque (
    ristretto255_point_t *q,
    const ristretto255_point_t *p
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Projectively scale a point, for debugging purposes.
 * The output will be equal to the input, and will be valid
 * even if the factor is zero.
 *
 * @param [out] q The point to scale.
 * @param [in] p The point to scale.
 * @param [in] factor Serialized GF factor to scale.
 */
void ristretto255_point_debugging_pscale (
    ristretto255_point_t *q,
    const ristretto255_point_t *p,
    const unsigned char factor[RISTRETTO255_SER_BYTES]
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Almost-Elligator-like hash to curve.
 *
 * Call this function with the output of a hash to make a hash to the curve.
 *
 * This function runs Elligator2 on the ristretto255 Jacobi quartic model.  It then
 * uses the isogeny to put the result in twisted Edwards form.  As a result,
 * it is safe (cannot produce points of order 4), and would be compatible with
 * hypothetical other implementations of Decaf using a Montgomery or untwisted
 * Edwards model.
 *
 * Unlike Elligator, this function may be up to 4:1 on [0,(p-1)/2]:
 *   A factor of 2 due to the isogeny.
 *   A factor of 2 because we quotient out the 2-torsion.
 *
 * This makes it about 8:1 overall, or 16:1 overall on curves with cofactor 8.
 *
 * Negating the input (mod q) results in the same point.  Inverting the input
 * (mod q) results in the negative point.  This is the same as Elligator.
 *
 * This function isn't quite indifferentiable from a random oracle.
 * However, it is suitable for many protocols, including SPEKE and SPAKE2 EE.
 * Furthermore, calling it twice with independent seeds and adding the results
 * is indifferentiable from a random oracle.
 *
 * @param [in] hashed_data Output of some hash function.
 * @param [out] pt The data hashed to the curve.
 */
void ristretto255_point_from_hash_nonuniform (
    ristretto255_point_t *pt,
    const unsigned char hashed_data[RISTRETTO255_HASH_BYTES]
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Indifferentiable hash function encoding to curve.
 *
 * Equivalent to calling ristretto255_point_from_hash_nonuniform twice and adding.
 *
 * @param [in] hashed_data Output of some hash function.
 * @param [out] pt The data hashed to the curve.
 */
void ristretto255_point_from_hash_uniform (
    ristretto255_point_t *pt,
    const unsigned char hashed_data[2*RISTRETTO255_HASH_BYTES]
) RISTRETTO_NONNULL RISTRETTO_NOINLINE;
/**
 * @brief Inverse of elligator-like hash to curve.
 *
 * This function writes to the buffer, to make it so that
 * ristretto255_point_from_hash_nonuniform(buffer) = pt if
 * possible.  Since there may be multiple preimages, the
 * "which" parameter chooses between them.  To ensure uniform
 * inverse sampling, this function succeeds or fails
 * independently for different "which" values.
 *
 * This function isn't guaranteed to find every possible
 * preimage, but it finds all except a small finite number.
 * In particular, when the number of bits in the modulus isn't
 * a multiple of 8 (i.e. for curve25519), it sets the high bits
 * independently, which enables the generated data to be uniform.
 * But it doesn't add p, so you'll never get exactly p from this
 * function.  This might change in the future, especially if
 * we ever support eg Brainpool curves, where this could cause
 * real nonuniformity.
 *
 * @param [out] recovered_hash Encoded data.
 * @param [in] pt The point to encode.
 * @param [in] which A value determining which inverse point
 * to return.
 *
 * @retval RISTRETTO_SUCCESS The inverse succeeded.
 * @retval RISTRETTO_FAILURE The inverse failed.
 */
ristretto_error_t ristretto255_invert_elligator_nonuniform (
    unsigned char recovered_hash[RISTRETTO255_HASH_BYTES],
    const ristretto255_point_t *pt,
    uint32_t which
) RISTRETTO_NONNULL RISTRETTO_NOINLINE RISTRETTO_WARN_UNUSED;
/**
 * @brief Inverse of elligator-like hash to curve.
 *
 * This function writes to the buffer, to make it so that
 * ristretto255_point_from_hash_uniform(buffer) = pt if
 * possible.  Since there may be multiple preimages, the
 * "which" parameter chooses between them.  To ensure uniform
 * inverse sampling, this function succeeds or fails
 * independently for different "which" values.
 *
 * @param [out] recovered_hash Encoded data.
 * @param [in] pt The point to encode.
 * @param [in] which A value determining which inverse point
 * to return.
 *
 * @retval RISTRETTO_SUCCESS The inverse succeeded.
 * @retval RISTRETTO_FAILURE The inverse failed.
 */
ristretto_error_t ristretto255_invert_elligator_uniform (
    unsigned char recovered_hash[2*RISTRETTO255_HASH_BYTES],
    const ristretto255_point_t *pt,
    uint32_t which
) RISTRETTO_NONNULL RISTRETTO_NOINLINE RISTRETTO_WARN_UNUSED;
/** Securely erase a scalar. */
void ristretto255_scalar_destroy (
    ristretto255_scalar_t *scalar
) RISTRETTO_NONNULL;
/** Securely erase a point by overwriting it with zeros.
 * @warning This causes the point object to become invalid.
 */
void ristretto255_point_destroy (
    ristretto255_point_t *point
) RISTRETTO_NONNULL;