tests/libristretto255-sys/src/lib.rs


    /// @brief Multiply a base point by a scalar: scaled = scalar*base.
    ///
    /// @param [out] scaled The scaled point base*scalar
    /// @param [in] base The point to be scaled.
    /// @param [in] scalar The scalar to multiply by.
    pub fn ristretto255_point_scalarmul(
        scaled: *mut ristretto255_point_t,
        base: *const ristretto255_point_t,
        scalar: *const ristretto255_scalar_t,
    );

    /// @brief Multiply a base point by a scalar: scaled = scalar*base.
    /// This function operates directly on serialized forms.
    ///
    /// @warning This function is experimental.  It may not be supported
    /// long-term.
    ///
    /// @param [out] scaled The scaled point base*scalar
    /// @param [in] base The point to be scaled.
    /// @param [in] scalar The scalar to multiply by.
    /// @param [in] allow_identity Allow the input to be the identity.
    /// @param [in] short_circuit Allow a fast return if the input is illegal.
    ///
    /// @retval RISTRETTO_SUCCESS The scalarmul succeeded.
    /// @retval RISTRETTO_FAILURE The scalarmul didn't succeed, because
    /// base does not represent a point.
    pub fn ristretto255_direct_scalarmul(
        scaled: *mut u8,
        base: *const u8,
        scalar: *const ristretto255_scalar_t,
        allow_identity: ristretto_bool_t,
        short_circuit: ristretto_bool_t,
    ) -> ristretto_error_t;

    /// @brief Precompute a table for fast scalar multiplication.
    /// Some implementations do not include precomputed points; for
    /// those implementations, this implementation simply copies the
    /// point.
    ///
    /// @param [out] a A precomputed table of multiples of the point.
    /// @param [in] b Any point.
    pub fn ristretto255_precompute(
        a: *mut ristretto255_precomputed_s,
        b: *const ristretto255_point_t,
    );

    /// @brief Multiply a precomputed base point by a scalar:
    /// scaled = scalar*base.
    /// Some implementations do not include precomputed points; for
    /// those implementations, this function is the same as
    /// ristretto255_point_scalarmul
    ///
    /// @param [out] scaled The scaled point base*scalar
    /// @param [in] base The point to be scaled.
    /// @param [in] scalar The scalar to multiply by.
    pub fn ristretto255_precomputed_scalarmul(
        scaled: *mut ristretto255_point_t,
        base: *const ristretto255_precomputed_s,
        scalar: *const ristretto255_scalar_t,
    );

    /// @brief Multiply two base points by two scalars:
    /// scaled = scalar1*base1 + scalar2*base2.
    ///
    /// Equivalent to two calls to ristretto255_point_scalarmul, but may be
    /// faster.
    ///
    /// @param [out] combo The linear combination scalar1*base1 + scalar2*base2.
    /// @param [in] base1 A first point to be scaled.
    /// @param [in] scalar1 A first scalar to multiply by.
    /// @param [in] base2 A second point to be scaled.
    /// @param [in] scalar2 A second scalar to multiply by.
    pub fn ristretto255_point_double_scalarmul(
        combo: *mut ristretto255_point_t,
        base1: *const ristretto255_point_t,
        scalar1: *const ristretto255_scalar_t,
        base2: *const ristretto255_point_t,
        scalar2: *const ristretto255_scalar_t,
    );

    /// Multiply one base point by two scalars:
    ///
    /// a1 = scalar1 * base
    /// a2 = scalar2 * base
    ///
    /// Equivalent to two calls to ristretto255_point_scalarmul, but may be
    /// faster.
    ///
    /// @param [out] a1 The first multiple.  It may be the same as the input point.
    /// @param [out] a2 The second multiple.  It may be the same as the input point.
    /// @param [in] base1 A point to be scaled.
    /// @param [in] scalar1 A first scalar to multiply by.
    /// @param [in] scalar2 A second scalar to multiply by.
    pub fn ristretto255_point_dual_scalarmul(
        a1: *mut ristretto255_point_t,
        a2: *mut ristretto255_point_t,
        base1: *const ristretto255_point_t,
        scalar1: *const ristretto255_scalar_t,
        scalar2: *const ristretto255_scalar_t,
    );

    /// @brief Multiply two base points by two scalars:
    /// scaled = scalar1*ristretto255_point_base + scalar2*base2.
    ///
    /// Otherwise equivalent to ristretto255_point_double_scalarmul, but may be
    /// faster at the expense of being variable time.
    ///
    /// @param [out] combo The linear combination scalar1*base + scalar2*base2.
    /// @param [in] scalar1 A first scalar to multiply by.
    /// @param [in] base2 A second point to be scaled.
    /// @param [in] scalar2 A second scalar to multiply by.
    ///
    /// @warning: This function takes variable time, and may leak the scalars
    /// used.  It is designed for signature verification.
    pub fn ristretto255_base_double_scalarmul_non_secret(
        combo: *mut ristretto255_point_t,
        scalar1: *const ristretto255_scalar_t,
        base2: *const ristretto255_point_t,
        scalar2: *const ristretto255_scalar_t,
    );

    /// @brief Constant-time decision between two points.  If pick_b
    /// is zero, out = a; else out = b.
    ///
    /// @param [out] out The output.  It may be the same as either input.
    /// @param [in] a Any point.
    /// @param [in] b Any point.
    /// @param [in] pick_b If nonzero, choose point b.
    pub fn ristretto255_point_cond_sel(
        out: *mut ristretto255_point_t,
        a: *const ristretto255_point_t,
        b: *const ristretto255_point_t,
        pick_b: ristretto_word_t,
    );

    /// @brief Constant-time decision between two scalars.  If pick_b
    /// is zero, out = a; else out = b.
    ///
    /// @param [out] out The output.  It may be the same as either input.
    /// @param [in] a Any scalar.
    /// @param [in] b Any scalar.
    /// @param [in] pick_b If nonzero, choose scalar b.
    pub fn ristretto255_scalar_cond_sel(
        out: *mut ristretto255_scalar_t,
        a: *const ristretto255_scalar_t,
        b: *const ristretto255_scalar_t,
        pick_b: ristretto_word_t,
    );

    /// @brief Test that a point is valid, for debugging purposes.
    ///
    /// @param [in] to_test The point to test.
    /// @retval RISTRETTO_TRUE The point is valid.
    /// @retval RISTRETTO_FALSE The point is invalid.
    pub fn ristretto255_point_valid(to_test: *const ristretto255_point_t) -> ristretto_bool_t;

    /// @brief Torque a point, for debugging purposes.  The output
    /// will be equal to the input.
    ///
    /// @param [out] q The point to torque.
    /// @param [in] p The point to torque.
    pub fn ristretto255_point_debugging_torque(
        q: *mut ristretto255_point_t,
        p: *const ristretto255_point_t,
    );

    /// @brief Projectively scale a point, for debugging purposes.
    /// The output will be equal to the input, and will be valid
    /// even if the factor is zero.
    ///
    /// @param [out] q The point to scale.
    /// @param [in] p The point to scale.
    /// @param [in] factor Serialized GF factor to scale.
    pub fn ristretto255_point_debugging_pscale(
        q: *mut ristretto255_point_t,
        p: *const ristretto255_point_t,
        factor: *const ::std::os::raw::c_uchar,
    );

    /// @brief Almost-Elligator-like hash to curve.
    ///
    /// Call this function with the output of a hash to make a hash to the curve.
    ///
    /// This function runs Elligator2 on the ristretto255 Jacobi quartic model.  It then
    /// uses the isogeny to put the result in twisted Edwards form.  As a result,
    /// it is safe (cannot produce points of order 4), and would be compatible with
    /// hypothetical other implementations of Decaf using a Montgomery or untwisted
    /// Edwards model.
    ///
    /// Unlike Elligator, this function may be up to 4:1 on [0,(p-1)/2]:
    /// A factor of 2 due to the isogeny.
    /// A factor of 2 because we quotient out the 2-torsion.
    ///
    /// This makes it about 8:1 overall, or 16:1 overall on curves with cofactor 8.
    ///
    /// Negating the input (mod q) results in the same point.  Inverting the input
    /// (mod q) results in the negative point.  This is the same as Elligator.
    ///
    /// This function isn't quite indifferentiable from a random oracle.
    /// However, it is suitable for many protocols, including SPEKE and SPAKE2 EE.
    /// Furthermore, calling it twice with independent seeds and adding the results
    /// is indifferentiable from a random oracle.
    ///
    /// @param [in] hashed_data Output of some hash function.
    /// @param [out] pt The data hashed to the curve.
    pub fn ristretto255_point_from_hash_nonuniform(
        pt: *mut ristretto255_point_t,
        hashed_data: *const ::std::os::raw::c_uchar,
    );

    /// @brief Indifferentiable hash function encoding to curve.
    ///
    /// Equivalent to calling ristretto255_point_from_hash_nonuniform twice and adding.
    ///
    /// @param [in] hashed_data Output of some hash function.
    /// @param [out] pt The data hashed to the curve.
    pub fn ristretto255_point_from_hash_uniform(
        pt: *mut ristretto255_point_t,
        hashed_data: *const ::std::os::raw::c_uchar,
    );

    /// @brief Inverse of elligator-like hash to curve.
    ///
    /// This function writes to the buffer, to make it so that
    /// ristretto255_point_from_hash_nonuniform(buffer) = pt if
    /// possible.  Since there may be multiple preimages, the
    /// "which" parameter chooses between them.  To ensure uniform
    /// inverse sampling, this function succeeds or fails
    /// independently for different "which" values.
    ///
    /// This function isn't guaranteed to find every possible
    /// preimage, but it finds all except a small finite number.
    /// In particular, when the number of bits in the modulus isn't
    /// a multiple of 8 (i.e. for curve25519), it sets the high bits
    /// independently, which enables the generated data to be uniform.
    /// But it doesn't add p, so you'll never get exactly p from this
    /// function.  This might change in the future, especially if
    /// we ever support eg Brainpool curves, where this could cause
    /// real nonuniformity.
    ///
    /// @param [out] recovered_hash Encoded data.
    /// @param [in] pt The point to encode.
    /// @param [in] which A value determining which inverse point
    /// to return.
    ///
    /// @retval RISTRETTO_SUCCESS The inverse succeeded.
    /// @retval RISTRETTO_FAILURE The inverse failed.
    pub fn ristretto255_invert_elligator_nonuniform(
        recovered_hash: *mut ::std::os::raw::c_uchar,
        pt: *const ristretto255_point_t,
        which: u32,
    ) -> ristretto_error_t;

    /// @brief Inverse of elligator-like hash to curve.
    ///
    /// This function writes to the buffer, to make it so that
    /// ristretto255_point_from_hash_uniform(buffer) = pt if
    /// possible.  Since there may be multiple preimages, the
    /// "which" parameter chooses between them.  To ensure uniform
    /// inverse sampling, this function succeeds or fails
    /// independently for different "which" values.
    ///
    /// @param [out] recovered_hash Encoded data.
    /// @param [in] pt The point to encode.
    /// @param [in] which A value determining which inverse point
    /// to return.
    ///
    /// @retval RISTRETTO_SUCCESS The inverse succeeded.
    /// @retval RISTRETTO_FAILURE The inverse failed.
    pub fn ristretto255_invert_elligator_uniform(
        recovered_hash: *mut ::std::os::raw::c_uchar,
        pt: *const ristretto255_point_t,
        which: u32,
    ) -> ristretto_error_t;

    /// Securely erase a scalar.
    pub fn ristretto255_scalar_destroy(scalar: *mut ristretto255_scalar_t);

    /// Securely erase a point by overwriting it with zeros.
    /// @warning This causes the point object to become invalid.
    pub fn ristretto255_point_destroy(point: *mut ristretto255_point_t);
